--- a/templates/shout.init.j2
+++ b/templates/shout.init.j2
@@ -14,17 +14,16 @@
 ### END INIT INFO
 
 PID=/var/run/shout.pid
-LOCK=/var/lock/shout.lock
 USER=nobody
 BIN=/usr/bin/shout
 PORT="{{ shout_port }}"
-DAEMONIZE_BIN="/usr/sbin/daemonize"
+FOREVER_BIN="/usr/bin/forever"
 
 # Carry out specific functions when asked to by the system
 case "$1" in
   start)
     echo "Starting Shout."
-    $DAEMONIZE_BIN -p $PID -l $LOCK -u $USER $BIN start --port=$PORT
+    $FOREVER_BIN --pidFile $PID --uid $USER $BIN start --port $PORT
     ;;
   stop)
     if [ -f $PID ]; then
@@ -41,7 +40,7 @@ case "$1" in
       kill -TERM $(cat $PID);
       rm -f $PID;
     fi
-    $DAEMONIZE_BIN -p $PID -l $LOCK -u $USER $BIN
+    $FOREVER_BIN --pidFile $PID --uid $USER $BIN start --port $PORT
     ;;
   status)
     if [ -f $PID ]; then
